# golden-incubator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  REQUIREMENTS.md  ROADMAP.md  docker-compose.yml  pyproject.toml
api/: config.py  db.py  main.py
api/routes/: __init__.py  artifacts.py  auth.py  conversations.py  ddd.py  entities.py  jobs.py  notes.py  progress.py  projects.py  sessions.py  steps.py
api/schemas/dto/: artifact.py  conversation.py  document.py  job.py  message.py  project.py  session.py  user.py
api/schemas/orm/: __init__.py  artifact.py  conversation.py  ddd.py  document.py  entity.py  message.py  note.py  project.py  session.py  step.py  user.py
api/services/: agent_service.py  ddd_generator.py  encryption.py  job_service.py  markdown_parser.py  redis.py  requirements_agent.py  status_reporter.py  storage.py
api/utils/: auth.py
architecture/: overview.md
capabilities/: 01-requirements-gathering.md  02-project-viewer.md
diagrams/: golden-incubator-process.md
docs/: app-architecture-guide.md
docs/phases/: 01-project-setup.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/artifacts/: ArtifactList.tsx  (+1 more)
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAgentStream.ts  useRouter.ts  useWebSocket.ts
frontend/src/types/: index.ts
tests/: conftest.py  test_artifacts.py  test_auth.py  test_conversations.py  test_projects.py  test_sessions.py
worker/: main.py
(+19 files in other folders)
